upgrade to groovy 4