@@ -21,23 +21,37 @@ configurations {
 }
 
 repositories {
-    jcenter()
-    maven { url 'http://repository.codehaus.org/' }
-    maven { url 'http://repo.grails.org/grails/core/' }
-    maven { url 'http://repository.springsource.com/maven/bundles/release' }
-    maven { url 'http://download.java.net/maven/2/' }
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
-    compile gradleApi()
-    compile("org.grails:grails-docs:$grailsDocsVersion",
-         "org.codehaus.groovy:groovy-all:$groovyVersion",
-         'radeox:radeox:1.0-b2',
-         'com.lowagie:itext:2.0.8',
-         'org.xhtmlrenderer:core-renderer:R8',
-         "log4j:log4j:${log4jVersion}",
-         "org.slf4j:slf4j-api:$slf4jVersion",
-         "org.slf4j:slf4j-log4j12:$slf4jVersion",
-         "org.slf4j:jcl-over-slf4j:$slf4jVersion")
+    implementation gradleApi()
+    localGroovy()
+    implementation "org.grails:grails-docs:$grailsDocsVersion"
+    //implementation "org.apache.groovy:groovy-all:$groovyVersion"
+    implementation 'radeox:radeox:1.0-b2'
+    implementation 'com.lowagie:itext:2.0.8'
+    implementation 'org.xhtmlrenderer:core-renderer:R8'
+    implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
+    implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
+    implementation "org.slf4j:slf4j-api:$slf4jVersion"
+    implementation "org.slf4j:slf4j-log4j12:$slf4jVersion"
+    implementation "org.slf4j:jcl-over-slf4j:$slf4jVersion"
+}
+
+
+// resolve conflict with gradle groovy 3 and project groogy 4
+tasks.withType(GroovyCompile).configureEach {
+    println "...>> $name"
+    if (name == "compileGroovy") {
+        groovyOptions.forkOptions.jvmArgs += [
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "-Dgroovy.target.bytecode=17"
+        ]
+        groovyOptions.fork = true
+        groovyClasspath = configurations.detachedConfiguration(
+            dependencies.create("org.apache.groovy:groovy:$groovyVersion")
+        )
+    }
 }
